--- a/demo/demo.vcxproj
+++ b/demo/demo.vcxproj
@@ -19,7 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.c" />
+    <ClCompile Include="2019-9-17 List\Main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="2019-9-17 List\ListBase.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
