--- a/demo/demo.vcxproj.filters
+++ b/demo/demo.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="2019-9-17 List\Main.c">
+    <ClCompile Include="2019-9-18 SingleLinkedList\main.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="2019-9-17 List\ListBase.h">
+    <ClInclude Include="2019-9-18 SingleLinkedList\SingleLinkedList.h">
       <Filter>源文件</Filter>
     </ClInclude>
   </ItemGroup>
