--- a/demo/demo.vcxproj
+++ b/demo/demo.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="2019-9-17 List\Main.c" />
+    <ClCompile Include="2019-9-18 SingleLinkedList\main.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="2019-9-17 List\ListBase.h" />
+    <ClInclude Include="2019-9-18 SingleLinkedList\SingleLinkedList.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
